--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
           <version>2.8.2</version>
         </plugin>
 
-        <plugin>
+        <!--<plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>ideauidesigner-maven-plugin</artifactId>
           <executions>
@@ -83,7 +83,7 @@
             <debug>true</debug>
             <failOnError>true</failOnError>
           </configuration>
-        </plugin>
+        </plugin>-->
       </plugins>
     </pluginManagement>
   </build>
